--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,33 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     color: #222;
+    max-width: 45em;
+    margin: auto;
+  }
+
+  .emojis {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
   }
   
   .emoji {
     border: 1px solid #222;
     border-radius: 8px;
     padding: 1rem;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
   }
   
   .emoji h2 {
+    order: 1;
     margin: 0;
     border-bottom: 2px solid #ccc;
   }
   
   .emoji a {
+    order: 3;
     text-decoration: none;
     background-color: #781BAA;
     color: white;
@@ -24,4 +37,11 @@ body {
   
   .icon {
     font-size: 4rem;
+  }
+
+  .emoji p {
+    order: 2;
+  }
+  .emoji .icon {
+    order: 0;
   }
