--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     color: #222;
-    max-width: 50em;
+    max-width: 55em;
     margin: auto;
   }
 
@@ -27,6 +27,7 @@ body {
   }
   
   .emoji a {
+    margin-top: auto;
     order: 3;
     text-decoration: none;
     background-color: #781BAA;
